// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Writing Flow Should navigate inner blocks with arrow keys 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:columns -->
<div class=\\"wp-block-columns\\"><!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p>1st col</p>
<!-- /wp:paragraph --></div>
<!-- /wp:column -->

<!-- wp:column -->
<div class=\\"wp-block-column\\"><!-- wp:paragraph -->
<p>2nd col</p>
<!-- /wp:paragraph --></div>
<!-- /wp:column --></div>
<!-- /wp:columns -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should allow selecting entire list with longer last item 1`] = `
"<!-- wp:paragraph -->
<p>a</p>
<!-- /wp:paragraph -->

<!-- wp:list -->
<ul><li></li></ul>
<!-- /wp:list -->"
`;

exports[`Writing Flow should create valid paragraph blocks when rapidly pressing Enter 1`] = `
"<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should insert line break at end 1`] = `
"<!-- wp:paragraph -->
<p>a<br></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should insert line break at end and continue writing 1`] = `
"<!-- wp:paragraph -->
<p>a<br>b</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should insert line break at start 1`] = `
"<!-- wp:paragraph -->
<p><br>a</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should insert line break in empty container 1`] = `
"<!-- wp:paragraph -->
<p><br></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should insert line break mid text 1`] = `
"<!-- wp:paragraph -->
<p>a<br>b</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should merge forwards 1`] = `
"<!-- wp:paragraph -->
<p>123</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should merge paragraphs 1`] = `
"<!-- wp:paragraph -->
<p>12</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate around inline boundaries 1`] = `
"<!-- wp:paragraph -->
<p>FirstAfter</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Before<strong>InsideSecondInside</strong>After</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>BeforeThird</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate around nested inline boundaries 1`] = `
"<!-- wp:paragraph -->
<p><strong><em>1</em> <em>2</em></strong></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate around nested inline boundaries 2`] = `
"<!-- wp:paragraph -->
<p>a<strong>b<em>c1d</em>e f<em>g2h</em>i</strong>j</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate contenteditable with normal line height 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate contenteditable with padding 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate contenteditable with side padding 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate empty paragraph 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should navigate empty paragraphs 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>3</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not create extra line breaks in multiline value 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p></p></blockquote>
<!-- /wp:quote -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a selected word 1`] = `
"<!-- wp:paragraph -->
<p>alpha  gamma</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a selected word 2`] = `
"<!-- wp:paragraph -->
<p>alpha beta gamma</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a word with Alt+Backspace 1`] = `
"<!-- wp:paragraph -->
<p>alpha  gamma</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a word with Alt+Backspace 2`] = `
"<!-- wp:paragraph -->
<p>alpha beta gamma</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a word with Backspace 1`] = `
"<!-- wp:paragraph -->
<p>1  3</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not delete surrounding space when deleting a word with Backspace 2`] = `
"<!-- wp:paragraph -->
<p>1 2 3</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not have a dead zone above an aligned block 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:image {\\"align\\":\\"wide\\"} -->
<figure class=\\"wp-block-image alignwide\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->"
`;

exports[`Writing Flow should not have a dead zone between blocks (lower) 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>23</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should not prematurely multi-select 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>></p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should preserve horizontal position when navigating vertically between blocks 1`] = `
"<!-- wp:paragraph -->
<p>abc</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>123</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should remember initial vertical position 1`] = `
"<!-- wp:paragraph -->
<p>1x</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><br>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Writing Flow should only consider the content as one tab stop 1`] = `
"<!-- wp:table -->
<figure class=\\"wp-block-table\\"><table><tbody><tr><td></td><td>2</td></tr><tr><td></td><td></td></tr></tbody></table></figure>
<!-- /wp:table -->"
`;
